force-app/main/default/objects/SQX_Part__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <description>This field store part number value</description>
    <label>Part Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>