force-app/main/default/objects/SQX_Part__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field is lookup to account</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parts</relationshipLabel>
    <relationshipName>Parts</relationshipName>
    <type>Lookup</type>
</CustomField>